@@ -61,6 +61,9 @@ java {
 application {
     mainClass.set('org.jabref.Launcher')
     mainModule.set('org.jabref')
+
+    applicationDefaultJvmArgs =
+        ['--add-exports=javafx.base/com.sun.javafx.event=org.jabref.merged.module']
 }
 
 // Workaround for https://github.com/openjfx/javafx-gradle-plugin/issues/89
@@ -394,7 +397,9 @@ compileJava {
         // TODO: Remove access to internal api
         addExports = [
                 // Fix for https://github.com/JabRef/jabref/issues/11188
+                'javafx.base/com.sun.javafx.event' : 'org.controlsfx.controls',
                 'javafx.base/com.sun.javafx.event' : 'org.jabref',
+                'javafx.base/com.sun.javafx.event' : 'org.jabref.merged.module',
 
                 'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
                 'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref'
@@ -406,6 +411,7 @@ run {
     // TODO: Remove access to internal api
     moduleOptions {
         addExports = [
+                'javafx.base/com.sun.javafx.event' : 'org.jabref',
                 'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
                 'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref',
 
@@ -424,6 +430,7 @@ run {
         ]
 
         addOpens = [
+                'javafx.base/com.sun.javafx.event' : 'org.jabref',
                 'javafx.controls/javafx.scene.control' : 'org.jabref',
                 'org.controlsfx.controls/org.controlsfx.control.textfield' : 'org.jabref',
                 'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
